--- a/site/style.css
+++ b/site/style.css
@@ -103,8 +103,8 @@
 }
 .cpal-card {
   background-color: white;
-  margin-left: 20px;
-  margin-bottom: 20px;
+  margin-right: 15px;
+  margin-bottom: 15px;
   height: 160px;
   -webkit-box-shadow: 2px 2px 10px #888888;
   -moz-box-shadow: 2px 2px 10px #888888;
