--- a/site/style.less
+++ b/site/style.less
@@ -127,8 +127,8 @@
 .cpal-card {
 
     background-color: @white-bg;
-    margin-left: 20px;
-    margin-bottom: 20px;
+    margin-right: 15px;
+    margin-bottom: 15px;
     height: 160px;
     .box-shadow(2px 2px 10px #888888);
 
