--- a/site/style.css
+++ b/site/style.css
@@ -38,7 +38,7 @@
   border-color: #484848;
 }
 .cpal-nav-bar {
-  background: white;
+  background: #ffffff;
 }
 .cpal-nav-bar .navbar-header .navbar-brand {
   padding: 0px;
@@ -66,7 +66,7 @@
   border-bottom: 0px;
   border: 0px solid;
   box-shadow: none !important;
-  background: white;
+  background: #ffffff;
 }
 .cpal-titles h1 {
   font-family: 'Bebas Neue Regular', sans-serif;
@@ -102,7 +102,7 @@
   font-size: 11px !important;
 }
 .cpal-card {
-  background-color: white;
+  background-color: #ffffff;
   margin-right: 15px;
   margin-bottom: 15px;
   height: 160px;
@@ -136,21 +136,24 @@
   background-color: #e44a20;
   margin-bottom: 50px;
 }
+.container-logo {
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+}
 .cpal-menu-bar li {
-  padding-left: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 20px;
+  padding: 5px 7px;
   border-bottom: 1px solid;
   border-color: #484848;
 }
 .cpal-menu-bar li a {
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Bebas Neue Regular', sans-serif;
   padding-left: 0px;
   padding-right: 0px;
   padding-bottom: 5px;
   background: transparent;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: bold;
   color: #484848;
   letter-spacing: 1px;
@@ -188,7 +191,7 @@
   border-color: #e44a20;
 }
 .cpal-menu-bar .select :hover {
-  border-color: white;
+  border-color: #ffffff;
   color: #484848;
 }
 .cpal-menu-bar .logo {
@@ -222,6 +225,9 @@
 .cpal-tabs .nav-tabs {
   border-bottom: 0px solid;
 }
+.cpal-tabs .nav-tabs li {
+  padding: 0;
+}
 .cpal-tabs .nav-tabs a {
   background-color: #eee;
   text-align: center;
@@ -230,11 +236,11 @@
 }
 .cpal-tabs .nav-tabs a:hover {
   background-color: #e44a20;
-  color: white;
+  color: #ffffff;
 }
 .cpal-tabs .nav-tabs li.active a {
   background-color: #e44a20;
-  color: white;
+  color: #ffffff;
 }
 .cpal-form {
   padding-top: 30px;
@@ -249,7 +255,7 @@
 }
 .cpal-form .cpal-submit {
   background-color: #e44a20;
-  color: white;
+  color: #ffffff;
   text-transform: uppercase;
 }
 .cpal-footer {
@@ -259,7 +265,7 @@
 }
 .cpal-footer p {
   margin-top: 10px;
-  color: white;
+  color: #ffffff;
   font-size: 13px;
 }
 @media (max-width: 767px) {
@@ -306,7 +312,7 @@
   }
   .gym-menu-bar li.open ul {
     position: absolute !important;
-    background: white !important;
+    background: #ffffff !important;
   }
   .gym-menu-bar li.open .dropdown-menu {
     width: 100%;
