--- a/site/style.less
+++ b/site/style.less
@@ -164,23 +164,27 @@
     margin-bottom: 50px;
 }
 
+.container-logo{
+    position: absolute;
+    margin:auto;
+    left:0;
+    right:0;
+}
 .cpal-menu-bar{
 
     li{
-        padding-left: 20px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        padding-right: 20px;
+        padding: 5px 7px;
         border-bottom: 1px solid;
         border-color: @gray-font;
 
         a{
-            font-family: 'Helvetica', sans-serif;
+            //font-family: 'Helvetica', sans-serif;
+            font-family:'Bebas Neue Regular', sans-serif;
             padding-left: 0px;
             padding-right: 0px;
             padding-bottom: 5px;
             background: transparent;
-            font-size: 15px;
+            font-size: 18px;
             font-weight: bold;
             color: @gray-font;
             letter-spacing: 1px;
@@ -278,6 +282,7 @@
     margin-top: 150px;
     margin-bottom: 100px;
     .nav-tabs{
+        li{ padding:0;}
         border-bottom: 0px solid;
         a {
             background-color: #eee;
