--- a/site/style.less
+++ b/site/style.less
@@ -112,9 +112,9 @@
     }
 }
 .cpal-cnt-gray{
-    padding-bottom: 60px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    padding-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     background-color: @gray-cnt-bg;
 }
 
@@ -169,6 +169,10 @@
     margin:auto;
     left:0;
     right:0;
+
+    img {
+        height: 100px;
+    }
 }
 .cpal-menu-bar{
 
@@ -327,11 +331,6 @@
 }
 
 
-
-
-
-
-
 .cpal-footer{
     margin-top: 50px;
     text-align: center;
@@ -347,53 +346,27 @@
 
 @media (max-width: 767px){
 
-    .gym-nav-bar{
-        .container{
-            .navbar-header{
-                .navbar-brand{
+    .container-logo{
 
-                    img{
-                        height: 100%;
-                    }
-                }
-            }
+
+        img {
+            height: 40px;
+            margin-left: 10px;
+            margin-top: 5px;
         }
     }
 
-    .gym-button{
+    .cpal-navbar-right {
+        padding-left: 0px;
 
-
-        input{
-            width: 200px;
-            text-align: left;
-        }
     }
 
-    .gym-titles{
-        h1{
-
-            font-size: 10px;
-            letter-spacing: 1px;
-            padding-bottom: 10px;
-            padding-top: 10px;
-        }
-    }
-
-    .gym-arrow-down {
-        width: 0;
-        height: 0;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-        border-top: 10px solid #f00;
-    }
-
-    .gym-menu-bar{
+    .cpal-menu-bar{
         margin-left: 0px;
         li{
-            padding-left: 0px;
+            padding-left: 20px;
 
             .dropdown-menu{
-
 
                 li{
 
@@ -410,8 +383,6 @@
         }
 
         li.open{
-            margin-left: -15px;
-            padding-left: 15px;
             height: auto;
 
 
@@ -431,264 +402,52 @@
 
     }
 
-    .losange, .losange div {
-        border: 2px solid;
-        border-color: @yellow-brand;
-        float: left;
-        margin-top: 5px;
-        margin-bottom: 2px;
-        margin-left: 2px;
-        transform-origin: 50% 50%;
-        width: 30px;
-        height: 30px;
-    }
-    .losange {
-      transform: rotate(45deg) translateY(10px);
-    }
-    .losange .los1 {
-      width: 40px;
-      height: 40px;
-      transform: rotate(-45deg) translateY(-15px) translateX(2px);
-    }
-
-
-    .gym-header-session{
-
-        .gym-prof-link {
-            float: left;
-            margin-top: 15px;
-            margin-left: 5px;
-            font-size: 12px;
-
-            div{
-                width: 90px;
-            }
-
-            img{
-                margin-top: 0px;
-                margin-left: 0px;
-            }
-
+    .cpal-images {
+        img {
+            width: 100%;
         }
 
-         label{
-            margin-top: 0px;
-            margin-left: 36px;
-            letter-spacing: 0px;
-            font-size: 12px;
+    }
+
+    .cpal-div-center{
+        margin-bottom: 20px;
+    }
+
+    .cpal-text {
+
+        margin-top: 20px;
+
+        h2 {
+            margin-top: 30px;
+            margin-bottom: 20px;
         }
+    }
 
-        .gym-num-sesion-cnt{
+    .cpal-cnt-gray{
+        margin-top: 30px;
+        margin-bottom: 0px;
+    }
 
-            .gym-num-sesion{
-                width: 40px;
-                height: 40px;
-                margin-top: 10px;
-                a{
-                    font-size: 12px;
-                }
-            }
+    .cpal-tabs {
 
-            label{
+        margin-bottom: 20px;
+    }
 
-                padding-right: 0px;
-                border-right: 0px solid;
-                margin-left: 5px;
-                font-size: 9px;
-                margin-top: 15px;
-            }
+    .cpal-card {
 
-            span{
-                font-size: 10px;
-            }
-        }
-
-        .gym-cnt-btn-head{
+        height: auto;
+        margin-left: 12px;
+        h3{
             text-align: center;
-            padding-top: 10px;
-            padding-bottom: 10px;
         }
 
     }
 
-    .gym-corouse{
-        min-height: auto;
-
-        #carousel-example-generic{
-            padding-top: 138px;
-        }
-
-        .carousel-control{
-            background: black;
-            height: 90px;
-            width: 50px;
-            margin-top: 0px;
-        }
-
+    .cpal-card-min-text {
+    p{
+        font-size: 13px !important;
     }
+}
 
-    .gym-benefits{
-
-        .gym-benefits-text{
-            border-right: 0px solid;
-            height: 230px;
-            img{
-                margin-top: 10px;
-                width: 50px;
-            }
-
-            .gym-ben-promo{
-                margin-top: 10px;
-                letter-spacing: 1;
-                font-weight: lighter;
-                font-size: 14px;
-            }
-
-            .gym-ben-exp{
-                font-size: 12px;
-                font-weight: lighter;
-                margin-top: 0px;
-                padding-bottom: 15px;
-
-            }
-        }
-    }
-
-    .gym-plans{
-        margin-top: 0px;
-
-        .gym-plan-cnt{
-
-
-
-            .gym-plan-title{
-
-                h2{
-
-                    font-size: 12px;
-                }
-
-            }
-        }
-
-
-
-        .gym-plan-3{
-
-            p{
-                margin-bottom: 20px;
-            }
-
-        }
-
-        .gym-plan-fot{
-            p{
-
-                margin-top: 20px;
-                margin-left: 20px;
-
-            }
-
-        }
-
-
-    }
-
-    .gym-networks{
-
-        padding-bottom: 20px;
-        padding-top: 20px;
-
-        .gym-networks-link{
-
-            .gym-link-cnt{
-                margin-left: 0px;
-
-
-                a{
-                    color: @yellow-brand;
-                    font-size: 11px;
-
-                    img{
-                        margin-left: 15px;
-                        width: 50px;
-                        display: block;
-                    }
-                }
-
-            }
-
-
-        }
-    }
-
-    .gym-headquarters{
-
-        .gym-hq-cnt{
-
-            margin-top: 2px;
-
-            .gym-cover{
-                bottom:0px;
-
-                .gym-icon-sede{
-                    margin-top: 20%;
-                }
-            }
-        }
-    }
-
-    .gym-galery{
-        margin-top: 0px;
-
-
-
-        .gym-filters{
-            margin-top: 10px;
-            margin-bottom: 10px;
-            font-size: 12px;
-            line-height: 3;
-
-            a{
-
-                margin-right: 12px;
-                margin-left: 14px;
-            }
-        }
-
-        .gym-galery-images{
-            img{
-                width: 100%;
-            }
-
-        }
-    }
-
-    .gym-footer{
-        margin-top: 0px;
-        padding-bottom: 50px;
-
-        .gym-footer-r{
-            margin-top: 20px;
-            padding-left: 20px;
-
-
-            h3{
-                margin-left: 10px;
-            }
-
-
-        }
-
-        .gym-footer-l{
-            margin-top: 0px;
-            min-height: 300px;
-
-            h3{
-                margin-right: 0px;
-            }
-
-        }
-    }
 
 }
