--- a/site/style.css
+++ b/site/style.css
@@ -83,7 +83,7 @@
 .cpal-text p {
   font-family: 'Helvetica', sans-serif;
   font-size: 15px;
-  color: #6e6e6e;
+  color: #878787;
 }
 .cpal-text h2 {
   margin-top: 70px;
@@ -120,7 +120,7 @@
   padding-bottom: 20px;
   font-family: 'Helvetica', sans-serif;
   font-size: 13px;
-  color: #6e6e6e;
+  color: #878787;
 }
 .cpal-navbar-right {
   margin-left: 0px;
