--- a/site/style.css
+++ b/site/style.css
@@ -38,7 +38,7 @@
   border-color: #484848;
 }
 .cpal-nav-bar {
-  background: #ffffff;
+  background: white;
 }
 .cpal-nav-bar .navbar-header .navbar-brand {
   padding: 0px;
@@ -66,7 +66,7 @@
   border-bottom: 0px;
   border: 0px solid;
   box-shadow: none !important;
-  background: #ffffff;
+  background: white;
 }
 .cpal-titles h1 {
   font-family: 'Bebas Neue Regular', sans-serif;
@@ -78,7 +78,7 @@
   margin-bottom: 0px;
 }
 .cpal-images img {
-  width: 90%;
+  width: 100%;
 }
 .cpal-text p {
   font-family: 'Helvetica', sans-serif;
@@ -102,18 +102,19 @@
   font-size: 11px !important;
 }
 .cpal-card {
-  background-color: #ffffff;
-  margin-right: 15px;
-  margin-bottom: 15px;
-  height: 160px;
+  background-color: white;
+  margin-right: 35px;
+  margin-bottom: 35px;
+  height: 180px;
   -webkit-box-shadow: 2px 2px 10px #888888;
   -moz-box-shadow: 2px 2px 10px #888888;
   box-shadow: 2px 2px 10px #888888;
 }
 .cpal-card h3 {
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #2c903b;
   font-size: 30px;
+  margin-top: 60px;
 }
 .cpal-card p {
   padding-top: 20px;
@@ -194,7 +195,7 @@
   border-color: #e44a20;
 }
 .cpal-menu-bar .select :hover {
-  border-color: #ffffff;
+  border-color: white;
   color: #484848;
 }
 .cpal-menu-bar .logo {
@@ -222,7 +223,7 @@
   text-decoration: none !important;
 }
 .cpal-tabs {
-  margin-top: 150px;
+  margin-top: 50px;
   margin-bottom: 100px;
 }
 .cpal-tabs .nav-tabs {
@@ -236,14 +237,15 @@
   text-align: center;
   color: #484848;
   font-weight: bold;
+  font-size: 12px;
 }
 .cpal-tabs .nav-tabs a:hover {
   background-color: #e44a20;
-  color: #ffffff;
+  color: white;
 }
 .cpal-tabs .nav-tabs li.active a {
   background-color: #e44a20;
-  color: #ffffff;
+  color: white;
 }
 .cpal-form {
   padding-top: 30px;
@@ -258,7 +260,7 @@
 }
 .cpal-form .cpal-submit {
   background-color: #e44a20;
-  color: #ffffff;
+  color: white;
   text-transform: uppercase;
 }
 .cpal-footer {
@@ -268,7 +270,7 @@
 }
 .cpal-footer p {
   margin-top: 10px;
-  color: #ffffff;
+  color: white;
   font-size: 13px;
 }
 @media (max-width: 767px) {
@@ -301,7 +303,7 @@
   }
   .cpal-menu-bar li.open ul {
     position: absolute !important;
-    background: #ffffff !important;
+    background: white !important;
   }
   .cpal-menu-bar li.open .dropdown-menu {
     width: 100%;
@@ -328,12 +330,28 @@
   }
   .cpal-card {
     height: auto;
-    margin-left: 12px;
+    margin-left: 30px;
   }
   .cpal-card h3 {
+    margin-top: 10px;
     text-align: center;
   }
   .cpal-card-min-text p {
     font-size: 13px !important;
+  }
+}
+@media (min-width: 992px) {
+  .cpal-card {
+    margin-right: 15px;
+    margin-left: 18px;
+  }
+  .cpal-card h3 {
+    text-align: center;
+  }
+  .cpal-card p {
+    font-size: 11px;
+  }
+  .cpal-tabs .nav-tabs a {
+    font-size: 10px;
   }
 }
