--- a/site/style.less
+++ b/site/style.less
@@ -91,7 +91,7 @@
 
 .cpal-images {
     img {
-        width: 90%;
+        width: 100%;
     }
 }
 
@@ -127,15 +127,17 @@
 .cpal-card {
 
     background-color: @white-bg;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    height: 160px;
+    margin-right: 35px;
+    margin-bottom: 35px;
+    height: 180px;
+
     .box-shadow(2px 2px 10px #888888);
 
     h3{
-        font-family: 'Helvetica', sans-serif;
+        font-family: 'Poppins', sans-serif;
         color: @green-font;
         font-size: 30px;
+        margin-top: 60px;
     }
 
     p{
@@ -283,7 +285,7 @@
 }
 
 .cpal-tabs {
-    margin-top: 150px;
+    margin-top: 50px;
     margin-bottom: 100px;
     .nav-tabs{
         li{ padding:0;}
@@ -293,6 +295,7 @@
             text-align: center;
             color: @gray-font;
             font-weight: bold;
+            font-size: 12px;
         }
 
         a:hover{
@@ -436,8 +439,9 @@
     .cpal-card {
 
         height: auto;
-        margin-left: 12px;
+        margin-left: 30px;
         h3{
+            margin-top: 10px;
             text-align: center;
         }
 
@@ -449,5 +453,36 @@
     }
 }
 
+
+}
+
+@media (min-width: 992px) {
+
+    .cpal-card {
+
+
+        margin-right: 15px;
+        margin-left: 18px;
+
+        h3{
+            text-align: center;
+        }
+
+        p{
+            font-size: 11px;
+        }
+
+    }
+
+    .cpal-tabs {
+
+        .nav-tabs{
+
+            a {
+
+                font-size: 10px;
+            }
+        }
+    }
 
 }
