--- a/site/style.less
+++ b/site/style.less
@@ -456,7 +456,25 @@
 
 }
 
-@media (min-width: 992px) {
+@media (max-width: 1200px) {
+
+    .cpal-card {
+
+
+        margin-right: 15px;
+        margin-left: 18px;
+
+
+
+        p{
+            font-size: 13px;
+        }
+
+    }
+
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
 
     .cpal-card {
 
